feat: add realtime websocket
